tdf#168634 Exif::processJpeg unhelpfully changes the endianness of the stream

Change-Id: Iee40e140ad73c616bcface9e3338b8e9555e2831
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/191710
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Michael Stahl <michael.stahl@collabora.com>