vcl/source/filter/graphicfilter.cxx
@@ -965,6 +965,7 @@ ErrCode GraphicFilter::readJPEG(SvStream & rStream, Graphic & rGraphic, GfxLinkT
 
     // Get Orientation from EXIF data
     GraphicNativeMetadata aMetadata;
+    SvStreamEndian aOriginalEndianness(rStream.GetEndian());
     if (aMetadata.read(rStream))
     {
         Degree10 aRotation = aMetadata.getRotation();
@@ -974,6 +975,7 @@ ErrCode GraphicFilter::readJPEG(SvStream & rStream, Graphic & rGraphic, GfxLinkT
             aTransform.rotate(aRotation);
         }
     }
+    rStream.SetEndian(aOriginalEndianness);
 
     return aReturnCode;
 }
